--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Mochammad Realdy Anrizsa Putra
-# logo
+logo: assets/img/photo.png
 # description
 show_downloads: true
 theme: jekyll-theme-minimal
